# CGALLearning

./: CMakeLists.txt  README.md
CMakeModules/: AddCGALExecutable.cmake
Core/: CMakeLists.txt  Core.cpp  Core.h
Examples/: CMakeLists.txt
Examples/0_draw_surface/: CMakeLists.txt
Examples/CGALQtExamples/: CMakeLists.txt
Examples/HelloWorld/: 0_PointsSegment.cpp  1_1_ArrayConvexHull.cpp  1_2_VectorConvexHull.cpp  CMakeLists.txt
Examples/HoleFiller/: CMakeLists.txt  triangulate_polyline_example.cpp
Examples/SurfaceMesh/: 0_surface_add_face.cpp  1_half2index.cpp  2_io2vertexindex.cpp  CMakeLists.txt
Vendors/CGAL/include/CGAL/: version.h
